BJS2-70826 add variables after termial operations, fix codestyle